# AnonMsg

./: netlify.toml
functions/post-message/: Cargo.toml
functions/post-message/src/: main.rs
public/: index.html  script.js  styles.css
