[package]
edition = "2018"
name = "post-message"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.16.0"
chrono = "0.4.39"
futures = "0.3.31"
http = "1.2.0"
lambda_runtime = "0.13.0"
log = "0.4.25"
mongodb = "3.2.0"
serde = "1.0.217"
serde_json = "1.0.138"
simple_logger = "5.0.0"
tokio = "1.43.0"
